--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.4",
+    "graphql": "^16.10.0",
     "react": "18.3.1",
     "react-native": "0.76.5"
   },
